--- a/views/homePage/index.html
+++ b/views/homePage/index.html
@@ -53,51 +53,44 @@
 
     <nav class="nav-container">
       <ul class="nav-menu">
-        <li>
-          <a
-            href="/"
-            id="home"
-            title="Trang Chủ Kỳ Long - Dịch vụ khí đốt công nghiệp"
-            >TRANG CHỦ</a
-          >
-        </li>
-        <li>
-          <a
-            href="/aboutPage"
-            id="about"
-            title="Giới thiệu về Công ty Kỳ Long - Chuyên gia khí đốt"
-            >GIỚI THIỆU</a
-          >
-        </li>
-        <li>
-          <a
-            href="/productsPage"
-            id="products"
-            title="Sản phẩm khí đốt và thiết bị công nghiệp Kỳ Long"
-            >SẢN PHẨM</a
-          >
-        </li>
-        <li>
-          <a
-            href="/servicePage"
-            id="services"
-            title="Dịch vụ cung cấp khí đốt công nghiệp Kỳ Long"
-            >DỊCH VỤ</a
-          >
-        </li>
-        <li>
-          <a href="/newsPage" id="news" title="Tin tức và cập nhật từ Kỳ Long"
-            >TIN TỨC</a
-          >
-        </li>
-        <li>
-          <a
-            href="/contactPage"
-            id="contact"
-            title="Liên hệ với Kỳ Long - Đối tác khí đốt tin cậy"
-            >LIÊN HỆ</a
-          >
-        </li>
+        <a
+          href="/"
+          id="home"
+          title="Trang Chủ Kỳ Long - Dịch vụ khí đốt công nghiệp"
+          >TRANG CHỦ</a
+        >
+
+        <a
+          href="/aboutPage"
+          id="about"
+          title="Giới thiệu về Công ty Kỳ Long - Chuyên gia khí đốt"
+          >GIỚI THIỆU</a
+        >
+
+        <a
+          href="/productsPage"
+          id="products"
+          title="Sản phẩm khí đốt và thiết bị công nghiệp Kỳ Long"
+          >SẢN PHẨM</a
+        >
+
+        <a
+          href="/servicePage"
+          id="services"
+          title="Dịch vụ cung cấp khí đốt công nghiệp Kỳ Long"
+          >DỊCH VỤ</a
+        >
+
+        <a href="/newsPage" id="news" title="Tin tức và cập nhật từ Kỳ Long"
+          >TIN TỨC</a
+        >
+
+        <a
+          href="/lien-he"
+          id="contact"
+          title="Liên hệ với Kỳ Long - Đối tác khí đốt tin cậy"
+          >LIÊN HỆ</a
+        >
       </ul>
     </nav>
 
@@ -632,7 +625,7 @@
               <div class="news-date">25/02/2025</div>
             </div>
             <h3 class="news-item-title">
-              TỔNG  QUAN  VỀ  DIỄN  BIẾN  GIÁ  KHÍ  LNG  TRONG  5 NĂM QUA
+              TỔNG QUAN VỀ DIỄN BIẾN GIÁ KHÍ LNG TRONG 5 NĂM QUA
             </h3>
             <div class="news-read-more">Xem chi tiết</div>
           </div>
