strike out redundant contacts

--- a/views/contactPage/index.html
+++ b/views/contactPage/index.html
@@ -175,11 +175,11 @@
             </div>
             <div class="contact-item">
               <i class="fas fa-phone-alt"></i>
-              <p>+84-090-2-000-899</p>
+              <p>Chưa áp dụng</p>
             </div>
             <div class="contact-item">
               <i class="fas fa-envelope"></i>
-              <p>info@kylong.com.vn</p>
+              <p>Chưa áp dụng</p>
             </div>
           </div>
 
@@ -293,14 +293,12 @@
           <p>81-83 Nguyễn Hữu Cầu, Phường Tân Định, Quận 1, TP. Hồ Chí Minh</p>
           <p>
             Điện thoại:
-            <a href="tel:+84902000899" title="Gọi cho Kỳ Long"
-              >+84-090-2-000-899</a
-            >
+            <a href="tel:Chưa áp dụng" title="Gọi cho Kỳ Long">Chưa áp dụng</a>
           </p>
           <p>
             Email:
-            <a href="mailto:info@kylong.com.vn" title="Gửi email cho Kỳ Long"
-              >info@kylong.com.vn</a
+            <a href="mailto:Chưa áp dụng" title="Gửi email cho Kỳ Long"
+              >Chưa áp dụng</a
             >
           </p>
         </div>
