--- a/views/homePage/index.html
+++ b/views/homePage/index.html
@@ -45,7 +45,7 @@
           </div>
           <div class="phone-text">
             <div>Số điện thoại</div>
-            <div>+84-090-2-000-899</div>
+            <div>Chưa áp dụng</div>
           </div>
         </div>
       </div>
@@ -776,14 +776,12 @@
           <p>81-83 Nguyễn Hữu Cầu, Phường Tân Định, Quận 1, TP. Hồ Chí Minh</p>
           <p>
             Điện thoại:
-            <a href="tel:+84902000899" title="Gọi cho Kỳ Long"
-              >+84-090-2-000-899</a
-            >
+            <a href="tel:Chưa áp dụng" title="Gọi cho Kỳ Long">Chưa áp dụng</a>
           </p>
           <p>
             Email:
-            <a href="mailto:info@kylong.com.vn" title="Gửi email cho Kỳ Long"
-              >info@kylong.com.vn</a
+            <a href="mailto:Chưa áp dụng" title="Gửi email cho Kỳ Long"
+              >Chưa áp dụng</a
             >
           </p>
         </div>
