--- a/views/homePage/index.html
+++ b/views/homePage/index.html
@@ -568,69 +568,9 @@
           <h2 class="news-title">TIN TỨC & THÔNG BÁO</h2>
           <div class="news-subtitle">Cập nhật mới nhất từ Kỳ Long</div>
         </div>
-
         <div class="news-grid">
-          <!-- News Item 1 -->
-          <div class="news-item" data-pdf="./pdf/news-pdf1.pdf">
-            <div class="news-thumbnail">
-              <img
-                src="./thumbnails/news-thumbnail1.png"
-                alt="Tin tức về hợp tác mới"
-              />
-              <div class="news-date">25/02/2025</div>
-            </div>
-            <h3 class="news-item-title">
-              Khí thiên nhiên hóa lỏng LNG: Khái niệm và quy trình sản xuất
-            </h3>
-            <div class="news-read-more">Xem chi tiết</div>
-          </div>
-
-          <!-- News Item 2 -->
-          <div class="news-item" data-pdf="./pdf/news-pdf2.pdf">
-            <div class="news-thumbnail">
-              <img
-                src="./thumbnails/news-thumbnail2.png"
-                alt="Tin tức về công nghệ mới"
-              />
-              <div class="news-date">25/02/2025</div>
-            </div>
-            <h3 class="news-item-title">
-              Khí thiên nhiên hóa lỏng LNG: Khái niệm và quy trình sản xuất
-            </h3>
-            <div class="news-read-more">Xem chi tiết</div>
-          </div>
-
-          <!-- News Item 3 -->
-          <div class="news-item" data-pdf="./pdf/news-pdf3.pdf">
-            <div class="news-thumbnail">
-              <img
-                src="./thumbnails/news-thumbnail3.png"
-                alt="Tin tức về sự kiện"
-              />
-              <div class="news-date">25/02/2025</div>
-            </div>
-            <h3 class="news-item-title">
-              Khí thiên nhiên hóa lỏng LNG: Khái niệm và quy trình sản xuất
-            </h3>
-            <div class="news-read-more">Xem chi tiết</div>
-          </div>
-
-          <!-- News Item 4 -->
-          <div class="news-item" data-pdf="./pdf/news-pdf4.pdf">
-            <div class="news-thumbnail">
-              <img
-                src="./thumbnails/news-thumbnail4.png"
-                alt="Tin tức về chứng nhận"
-              />
-              <div class="news-date">25/02/2025</div>
-            </div>
-            <h3 class="news-item-title">
-              TỔNG QUAN VỀ DIỄN BIẾN GIÁ KHÍ LNG TRONG 5 NĂM QUA
-            </h3>
-            <div class="news-read-more">Xem chi tiết</div>
-          </div>
+          <!-- News items will be dynamically loaded by JavaScript -->
         </div>
-
         <div class="news-view-all">
           <a href="/newsPage" class="view-all-button">Xem tất cả tin tức</a>
         </div>
